--- a/lectures/17-home.qmd
+++ b/lectures/17-home.qmd
@@ -3,7 +3,7 @@ title: "Lecture 17: Reproducible Workflow"
 date: 2025-12-01
 summary: "Reproducible Workflow"
 url_slides: 17-slides.qmd
-#url_code: css-materials/workflow
+url_code: css-materials/deep-dive-reproducible-git-rmd
 page-layout: full
 draft: false
 ---
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = FALSE)
 * **Date**: {{< meta date >}}
 * **Topics**: {{< meta summary >}}
 * **Slides**: [View Slides]({{< meta url_slides >}})
-* **Code**: No in-class code to download
+* **Code**: `usethis::use_course("{{< meta url_code >}}")`
 
 <!--`usethis::use_course("css-materials/deep-dive-reproducible-git-rmd")`-->
 
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 * Define a project-oriented workflow in R and identify R startup procedures
 * Expand current knowledge of R Markdown
-* Basics of Git/GitHub via terminal/command line 
+* Optional: Basics of Git/GitHub via terminal/command line 
 
 ## Readings
 
