--- a/lectures/17-home.qmd
+++ b/lectures/17-home.qmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Learning Objectives
 
-* Define a project-oriented workflow in R and identify R startup procedures
+* Define a project-oriented workflow in R and identify best R procedures
 * Expand current knowledge of R Markdown
 * Optional: Basics of Git/GitHub via terminal/command line 
 
